--- a/template/layout/base.html.twig
+++ b/template/layout/base.html.twig
@@ -10,7 +10,8 @@
         <link href="{{constant('URL_SISTEMA')}}css/bootstrap.min.css" rel="stylesheet">
         <link href="{{constant('URL_SISTEMA')}}css/bootstrap-responsive.min.css" rel="stylesheet">
         <link href="{{constant('URL_SISTEMA')}}css/style.css" rel="stylesheet">
-        <script src="http://code.jquery.com/jquery-latest.js"></script>
+        <!--<script src="http://code.jquery.com/jquery-latest.js"></script>-->
+        <script src="{{constant("URL_SISTEMA")}}js/jquery-1.7.1.min.js"></script>
         <script src="{{constant("URL_SISTEMA")}}js/bootstrap.js"></script>
         <script src="{{constant("URL_SISTEMA")}}js/jquery-validate/jquery.validate.js"></script>
         <script src="{{constant('URL_SISTEMA')}}js/jquery-validate/localization/messages_es.js"></script>
