--- a/template/login.html.twig
+++ b/template/login.html.twig
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div class="form-actions">
-                    <input class="required" required="true" class="btn btn-primary" type="submit" name="submit" value="iniciar sesion"/>
+                    <input class="btn btn-primary" type="submit" name="submit" value="iniciar sesion"/>
                 </div>
             </fieldset>
         </form>
